Fix(Style): Fix Layout Spacing

--- a/styles.css
+++ b/styles.css
@@ -11,12 +11,12 @@ body {
 
  .name {
   position: absolute;
-  bottom: 10px;
   left: 20px;
   width: max-content;
   font-size: 32px;
   font-weight: 700;
   color: white;
+  top: 85%;
 }
 
 .imageBox {
@@ -77,7 +77,7 @@ h3 {
   justify-content: space-evenly;
 }
 
-.contact p:last-child > img, .aboutSocials {
+.contact p:last-child > img, .aboutSocials > img {
   width: 32px;
   height: 32px;
 }
@@ -88,9 +88,10 @@ h2, h3 {
 
 .aboutSocials {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  justify-items: center;
+  grid-template-columns: repeat(3, max-content);
+  justify-content: center;
   margin-bottom: 4rem;
+  gap: 1rem;
 }
 
 .contact span {
@@ -183,6 +184,7 @@ h2, h3 {
     grid-template-columns: repeat(3, max-content);
     gap: 2rem;
     margin-bottom: 0;
+    margin-left: auto;
   }
   .myImage {
     transform: scale(1.1);
